# docs_translator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
.serena/cache/: document_symbols_cache.pkl
.serena/memories/: code_style.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
docs/markdown_sample/: README.md  api.md  introduction.md
docs/markdown_sample/examples/: advanced.md  basic.md
docs/sphinx_sample/: README.md  conf.py  index.rst  intro.rst
docs/sphinx_sample/api/: index.rst  sample_class.rst  utils.rst
src/docs_translator/: __init__.py  api.py  cache_tool.py  cli.py  dependency_checker.py  processor.py  sphinx_intl_processor.py  translation_cache.py  translator.py
src/docs_translator/parsers/: __init__.py  base.py  markdown.py  sphinx.py  sphinx_intl.py
tests/: test_translator.py
